[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/grid/GameGrid.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/GameScene.gd" type="Script" id=2]
[ext_resource path="res://fonts/BitPotionExt.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/base_theme.tres" type="Theme" id=4]
[ext_resource path="res://images/o.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.317647, 0.341176, 0.317647, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_color = Color( 0.317647, 0.341176, 0.317647, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 480.0
rect_min_size = Vector2( 720, 480 )
mouse_filter = 2
color = Color( 0.960784, 0.976471, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": "asfd"
}

[node name="Grid" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 240 )
scale = Vector2( 2, 2 )

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Tween" type="Tween" parent="Hud"]

[node name="WinLabel" type="Label" parent="Hud"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -100.0
margin_right = 110.0
margin_bottom = -44.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "Tic Tac Toe!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="Label" parent="Hud"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -60.0
margin_right = 110.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "X WINS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinCounts" type="VBoxContainer" parent="Hud"]
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_bottom = 32.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="O" type="HBoxContainer" parent="Hud/WinCounts"]
margin_right = 160.0
margin_bottom = 28.0

[node name="OLabel" type="Label" parent="Hud/WinCounts/O"]
margin_right = 62.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "O Wins:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wins" type="Label" parent="Hud/WinCounts/O"]
margin_left = 66.0
margin_right = 76.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "0"

[node name="X" type="HBoxContainer" parent="Hud/WinCounts"]
margin_top = 32.0
margin_right = 160.0
margin_bottom = 60.0

[node name="XLabel" type="Label" parent="Hud/WinCounts/X"]
margin_right = 62.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "X Wins:"

[node name="Wins" type="Label" parent="Hud/WinCounts/X"]
margin_left = 66.0
margin_right = 76.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "0"

[node name="DrawLabel" type="Label" parent="Hud/WinCounts"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 160.0
margin_bottom = 92.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "Press R to reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnContainer" type="HBoxContainer" parent="Hud"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 32.0
margin_bottom = 32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="Hud/TurnContainer"]
margin_left = 30.0
margin_right = 62.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="TurnLabel" type="Label" parent="Hud/TurnContainer"]
margin_left = 66.0
margin_top = 2.0
margin_right = 130.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.317647, 0.341176, 0.317647, 1 )
text = "'s Turn"

[node name="Timers" type="CanvasLayer" parent="."]

[node name="RandomPlayerTimer" type="Timer" parent="Timers"]
wait_time = 3.0
